# swmm-bin-rep-reader

./: .gitignore  CMakeLists.txt  README.md  concentration_units.def  datetime.h  element_type.def  enums.h  enums_pp.h  flow_units.def  input_data_type.def  link_result_type.def  main.cpp  node_result_type.def  out.seq.1  parse_types.h  reader.c  reader.h  subcatch_result_type.def  swmm_bin_read.i  swwm-bin-read.pro
